# Rust

Book_exercises/area_of_rectangular_room/: Cargo.toml
Book_exercises/area_of_rectangular_room/src/: main.rs
Book_exercises/character_counting/: Cargo.toml
Book_exercises/character_counting/src/: main.rs
Book_exercises/currency_conventer/: Cargo.toml
Book_exercises/currency_conventer/src/: main.rs
Book_exercises/hello_name/: Cargo.toml
Book_exercises/hello_name/src/: main.rs
Book_exercises/paint_calculator/: Cargo.toml
Book_exercises/paint_calculator/src/: main.rs
Book_exercises/pizza_party/: Cargo.toml
Book_exercises/pizza_party/src/: main.rs
Book_exercises/printing_quotes/: Cargo.toml
Book_exercises/printing_quotes/src/: main.rs
Book_exercises/retirement_calculator/: Cargo.toml
Book_exercises/retirement_calculator/src/: main.rs
Book_exercises/self_checkout/: Cargo.toml
Book_exercises/self_checkout/src/: main.rs
Book_exercises/simple_interest/: Cargo.toml
Book_exercises/simple_interest/src/: main.rs
Book_exercises/simple_math/: Cargo.toml
Book_exercises/simple_math/src/: main.rs
Book_exercises/tip_calc/: Cargo.toml
Book_exercises/tip_calc/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
functions/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
