[package]
name = "currency_conventer"
version = "0.1.0"
authors = ["Vladislav Tikhonov <vladislav.v.tikhonov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
num = "0.2.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
